crates/oxc_css/tests/error/at-rule/keyframes/qualified-rule.snap
---
source: crates/oxc_css/tests/error.rs
---
error: keyframe block is expected
  ┌─ qualified-rule.css:2:3
  │
2 │   .from {}
  │   ^


